New in v0.7.5 (2002/06/01)
--------------------------

Fixed bug noticed by Dean Gaudet in processing of
--(include|exclude)-filelist[-stdin] options when source directory was
remote.


New in v0.7.4 (2002/05/11)
--------------------------

Added new restore syntax and corresponding -r and --restore-as-of
options.  For instance, "rdiff-backup -r 1/3/2002 /backup/foo out"
will try to restore /backup/foo (a file on the mirror directory) to
out, as it was January 3rd, 2002.  See man page for more information.

directory_statistics.<time>.data files will now be created in the
directories underneath rdiff-backup-data/increments.  Just look at one
to see what's inside.

Added extra options --chars-to-quote, --quoting-char, and
--windows-mode, mostly to allow files whose names have colons (:) in
them to be backed up to windows machines.

Now the -l and --list-increments switches can list the increments
corresponding to any mirror file, not just the root directory.  Also
the option --parsable-output was added to control whether the
--list-increments output looks better for a human, or computer.

Improved remove-earlier-than handling so it should run approximately
as fast locally and remotely.

Probably fixed bug noticed by Erminio Baranzini which caused
rdiff-backup to try to preserve access times unnecessarily (the
default is not preserve access times).

Rewrote a few large chunks of code for clarity and simplicity.

Allow extended time strings for the --remove-older-than option.

Added RESTORING section to the manual page because there seemed to be
some general confusion about this.

hardlink_data, current_mirror, and a few other files now carry the
.data extension (instead of .snapshot), to make it clearer they are
not copies of source files.


New in v0.7.3 (2002/04/29)
--------------------------

Fixed broken remote operation in v0.7.2 by applying (a variant of)
Daniel Robbins' patch.  Also fixed associated bug in test set.
