@@ -1,6 +1,10 @@
 New in v0.7.5 (2002/06/01)
 --------------------------
 
+After a bit of empirical testing, increased Globals.conn_bufsize and
+enabled ssh compression by default.  This should speed up the
+"typical" remote session.
+
 Fixed bug noticed by Dean Gaudet in processing of
 --(include|exclude)-filelist[-stdin] options when source directory was
 remote.
